--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Gwyn's Resume</title>
+	<title>Juan Hernandez Resume</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -58,12 +58,8 @@
             
             <p>and this page has been viewed <a id="counter"></a> times :) </p> 
             <ul class="social">
-               <li><a href="https://twitter.com/madebygps"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://madebygps.com"><i class="fa fa-external-link"></i></a></li>
-               <li><a href="https://linkedin.com/in/gwyneth-pena"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://instagram.com/madebygps"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="https://youtube.com/madebygps"><i class="fa fa-youtube"></i></a></li>
-               <li><a href="https://github.com/madebygps/cgc-azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/juan-hernandez-41774320a/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://github.com/luvgo/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
